hard-gists/4089133/run.log
=== Docker Run Log for 4089133 ===
Started at: Mi 29. Okt 14:20:57 CET 2025

[2025-10-29 14:20:57] START: Running container for 4089133
[2025-10-29 14:20:58] SUCCESS: Container da91651ef02a21e0ccec0b9c376ca84567f052f5c4d68e667fa58294494b1d7c started for 4089133
=== Container logs for 4089133 ===
  File "/snippet.py", line 37
    print "Saved to %s" % filename
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4089133 ===
[2025-10-29 14:21:00] INFO: Container da91651ef02a21e0ccec0b9c376ca84567f052f5c4d68e667fa58294494b1d7c has stopped
